# ComfyUI-KiraLoraEQ

./: README.md  __init__.py  kira_lora_eq.py  pyproject.toml
.github/workflows/: publish.yml
js/: kira_lora_eq_ui.js
